Add surefire plugin