@@ -12,9 +12,12 @@
         <project.java.version>14</project.java.version>
         <maven.compiler.source>${project.java.version}</maven.compiler.source>
         <maven.compiler.target>${project.java.version}</maven.compiler.target>
+        <!-- plugin versions -->
+        <version.plugin.maven.surefire>3.0.0-M5</version.plugin.maven.surefire>
+        <version.plugin.maven.jacoco>0.8.6</version.plugin.maven.jacoco>
+        <!-- dependencies versions -->
         <version.testng>7.3.0</version.testng>
         <version.assertj>3.18.1</version.assertj>
-        <version.jacoco>0.8.6</version.jacoco>
     </properties>
 
     <dependencies>
@@ -35,9 +38,20 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${version.plugin.maven.surefire}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${version.jacoco}</version>
+                <version>${version.plugin.maven.jacoco}</version>
                 <executions>
                     <execution>
                         <goals>
